[metadata]
name = read_acq
description = Read/Write ACQ Spectrum Files
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/edges-collab/read_acq
author = EDGES Team
author_email = steven.g.murray@asu.edu
license = MIT
license_file = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
    numpy
    scipy
    tqdm
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    acq = read_acq.cli:main

[options.extras_require]
dev =
    edges-io
    pre-commit
    pytest>=5
h5 =
    edges-io

[test]
extras = True

[tool:pytest]
addopts =
    --verbose --durations=25
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
